Add support for enabling repo mirroring and running as non-root

--- a/templates/config.yaml.j2
+++ b/templates/config.yaml.j2
@@ -46,7 +46,7 @@ FEATURE_MAILING: false
 FEATURE_NONSUPERUSER_TEAM_SYNCING_SETUP: false
 FEATURE_PARTIAL_USER_AUTOCOMPLETE: true
 FEATURE_PROXY_STORAGE: false
-FEATURE_REPO_MIRROR: false
+FEATURE_REPO_MIRROR: {{ feature_repo_mirror }}
 FEATURE_REQUIRE_TEAM_INVITE: true
 FEATURE_RESTRICTED_V1_PUSH: true
 FEATURE_SECURITY_NOTIFICATIONS: false
